# heimdex-for-livecommerce-dev

./: .gitignore  .stop-guard-ignore  HANDOFF.md  README.md  docker-compose.override.yml  docker-compose.yml  elasticmq.conf
.claude/: CLAUDE.md
.figma-cache/: 1602-36895_cancel-dialog.json  1713-287987_saved-shorts.json  1713-288042_wizard-result.json  1713-288103_wizard-indexing.json  1713-288149_wizard-product-single.json  1713-288182_wizard-product-multi.json  1713-288216_wizard-criteria.json
.github/workflows/: analytics-export.yml  build-gpu-images.yml  deploy-production.yml  deploy-staging.yml  ensure-partitions.yml  requeue-stale-renders.yml  search-quality.yml  test.yml  worker-events-export.yml
.omc/sessions/: 00c22c25-eb3a-45f9-ad37-37930038f028.json
.omc/state/: agent-replay-338278ad-82fb-4fff-9e69-98a47e90eb84.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
_reports/: 00_git_baseline.txt  01_copy_log.txt  02_missing_files.txt  03_extracted_edits.md  04_migration_audit.md  05_build_logs_api.txt  05_build_logs_opensearch.txt  05_build_logs_worker.txt  05_build_summary.md  06_runtime_health.md  09_git_final_state.txt  EXTRACTION_SUMMARY.md
docs/: AUTH0_SETUP.md  OVERLAY_PARENT_PRODUCT_CATALOG_PLAN.md  architecture.md  render-fidelity.md  search-quality.md
docs/coupling_audit/: PR_internal_api_hardening_leases.md  PR_phase1b2_ocr_worker_db_free.md
docs/google-drive/: PR_PLAN_STT_V3B.md  STT_V3B_DESIGN.md
docs/housekeeping/: 00_findings.md  01_cleanup_plan.md  02_deprecation_map.md  03_next_pr_checklist.md
docs/releases/: RELEASE_GDRIVE_SYNC_E2E.md
infra/opensearch/: Dockerfile
scripts/: backfill-created-time.py  check_no_worker_db_coupling.sh  recover_timestamps.py  setup.sh
services/api/: Dockerfile  README.md  pyproject.toml  pytest.ini
services/drive-blur-worker/: Dockerfile.gpu  requirements.txt
services/drive-caption-worker/: Dockerfile  Dockerfile.gpu  pyproject.toml
services/drive-face-worker/: Dockerfile.gpu
services/drive-ocr-worker/: Dockerfile  Dockerfile.gpu  pyproject.toml
services/drive-reranker-worker/: Dockerfile.gpu
services/drive-stt-worker/: Dockerfile  Dockerfile.gpu  pyproject.toml
services/drive-transcode-worker/: Dockerfile.gpu  pyproject.toml
services/drive-visual-embed-worker/: Dockerfile  (+1 more)
services/shorts-render-worker/: Dockerfile  conftest.py  pyproject.toml
services/shorts-render-worker/scripts/: download-fonts.sh
services/shorts-render-worker/src/: worker.py
services/shorts-render-worker/tests/: test_render.py  test_render_fidelity.py  test_render_logging.py  test_text_wrap.py  test_worker.py
(+668 files in other folders)
